# scythe_mcp_reaper

./: .gitignore  README.md  demo_piano.py  pyproject.toml
scythe_mcp/: __init__.py
scythe_mcp/generators/: __init__.py  basslines.py  drums.py  melodies.py
scythe_mcp/music_theory/: __init__.py  chords.py  progressions.py  rhythm.py  scales.py
scythe_mcp/reascript/: install.md  scythe_client.lua  scythe_poller.lua
scythe_mcp/server/: __init__.py  main.py  reaper_bridge.py
tests/: test_live_generators.py  test_lua.py  test_mcp_integration.py  test_mcp_tools.py  test_structure.py
