[project]
name = "scythe-mcp"
version = "0.1.0"
description = "AI-powered composition and editing assistant for REAPER DAW via MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "python-osc>=1.8.0",
]

[project.scripts]
scythe-mcp = "scythe_mcp.server.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scythe_mcp*"]
